syncing changes and adding loader

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,13 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open Sans"
         />
+        <style>
+            @keyframes spin {
+                to {
+                    transform: rotate(360deg);
+                }
+            }
+        </style>
     </head>
     <body class="bg-gray-100 dark:bg-gray-800 transition-colors duration-300">
         <nav
