--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,12 +1,14 @@
 body {
     font-family: "Open Sans", sans-serif;
 }
-/* Add loading spinner animation */
-/* Add loading spinner animation */
-@keyframes spinner {
+@keyframes spin {
     to {
         transform: rotate(360deg);
     }
+}
+
+.animate-spin {
+    animation: spin 1s linear infinite;
 }
 .loader {
     border: 4px solid #f3f3f3;
