hard stop for summary , video and audio generation

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,7 @@
                             class="w-16 h-16 border-4 border-blue-500 border-solid rounded-full animate-spin"
                         ></div>
                     </div>
+                    <div id="mediaContainer" hidden></div>
                 </div>
             </div>
         </div>
