--- a/static/css/index.css
+++ b/static/css/index.css
@@ -21,3 +21,14 @@ body {
 .hidden {
     display: none;
 }
+
+/* Adjust carousel styles */
+.carousel {
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none; /* hide scrollbar in Firefox */
+    -ms-overflow-style: none; /* hide scrollbar in IE */
+}
+.carousel::-webkit-scrollbar {
+    display: none; /* hide scrollbar in Chrome, Safari, and Edge */
+}
