--- a/templates/index-1.html
+++ b/templates/index-1.html
@@ -14,13 +14,21 @@
             <div class="mb-4">
                 <input type="text" class="w-full px-8 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 text-xl">
             </div>
-            <div class="flex flex-col sm:flex-row justify-between">
-                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-2 sm:mb-0 sm:mr-2">
-                    Submit
+            <div class="flex justify-center">
+              <div class="grid grid-cols-2 gap-8">
+                <button class="bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded">
+                  Quiz
                 </button>
-                <button type="button" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
-                    I'm feeling lucky
+                <button class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded">
+                  Video
                 </button>
+                <button class="bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded">
+                  Summary
+                </button>
+                <button class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded">
+                  Flash Cards
+                </button>
+              </div>
             </div>
         </form>
     </div>
