--- a/templates/index.html
+++ b/templates/index.html
@@ -68,12 +68,18 @@
                         >
                             Quiz
                         </button>
-                    </div>
-                    <div class="mt-4 flex justify-center">
-                        Looking for a &nbsp;
-                        <a href="" class="text-blue-600">text</a> &nbsp;or
-                        &nbsp;<a href="" class="text-blue-600">audio </a>&nbsp;
-                        summary?
+                        <button
+                            id="summary-btn"
+                            class="px-4 py-2 rounded-md bg-red-500 text-white hover:bg-blue-600"
+                        >
+                            Summary
+                        </button>
+                        <button
+                            id="audio-btn"
+                            class="px-4 py-2 rounded-md bg-blue-500 text-white hover:bg-blue-600"
+                        >
+                            Audio
+                        </button>
                     </div>
                 </div>
                 <div
