hard stop for the flashcard

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,12 @@
                         >
                             Audio
                         </button>
+                        <button
+                            id="flashcard-btn"
+                            class="px-4 py-2 rounded-md bg-blue-500 text-white hover:bg-blue-600"
+                        >
+                            Flashcards
+                        </button>
                     </div>
                 </div>
                 <div
