--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                 <input class="w-full px-4 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500" rows="4" placeholder="Enter Youtube/Medium URL" id="url-input" type="text"></input>
             </div>
             <div class="flex justify-between">
-                <button id="video-btn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Video</button>
+                <button id="video-btn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-not-allowed" disabled >Video</button>
                 <button id="quiz-btn" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Quiz</button>
                 <button id="summary-btn" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded">Summary</button>
                 <button id="audio-btn" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Audio</button>
